Applied fixes in Course Page UI    - Alignment of Course setting Button.    - Alignment of Block setting Button.

--- a/web/css/instructor.css
+++ b/web/css/instructor.css
@@ -1,7 +1,9 @@
 .common-setting {
-    position: absolute;
-    right: 90px;
-}
+    position: relative;
+    float:right;
+   }
+
+
 .common-setting-calendar{
     position: absolute;
     right: 0;
