--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1115,6 +1115,10 @@ div.review {
 .margin-right-minus-thirtythree {
     margin-right: -33px;
 }
+.margin-right-minus-fifteen {
+    margin-right: -15px;
+}
+
 .padding-top-one-thwenty {
     padding-top: 120px;
 }
